--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "nodemon": "^2.0.21",
+    "ts-node": "^10.9.1"
   }
 }
