--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^5.54.1",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1"
   }
