--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A simple blog app",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Benjamin Ojobo",
@@ -14,12 +17,16 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.0",
+    "@types/swagger-ui-express": "^4.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
+    "sequelize": "^6.29.3",
+    "swagger-ui-express": "^4.6.2",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
