--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "author": "Benjamin Ojobo",
   "license": "ISC",
   "dependencies": {
+    "@types/aws-serverless-express": "^3.3.5",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -19,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.0",
     "@types/swagger-ui-express": "^4.1.3",
+    "aws-serverless-express": "^3.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -26,10 +29,16 @@
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.2.0",
+    "mysql2": "^2.2.5",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.3",
+    "serverless-http": "^3.2.0",
+    "serverless-mysql": "^1.5.4",
+    "serverless-offline": "^12.0.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
+    "typeorm": "^0.3.12",
+    "typeorm-typedi-extensions": "^0.4.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
