--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,11 @@
     "module": "commonjs",
     "outDir": "./dist",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "sourceMap": true,
 }
   
